Alteração do cabeçalho do menu

--- a/index.html
+++ b/index.html
@@ -10,24 +10,26 @@
     <header>
         <nav class="navbar navbar-expand-md">
             <div class="container-fluid">
-                <a href="#" class="navbar-brand">Rápido&Seguro</a>
-
-                <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#menuNav">
+                <div class="row">
+                    <img src="assets/testeee.png" alt="Logo da Empresa" class=" col-2">
+                <a href="#" class="navbar-brand col-6" >Rápido&Seguro</a>
+                    <button class="navbar-toggler col-3" data-bs-toggle="collapse" data-bs-target="#menuNav">
                     <span class="navbar-toggler-icon"></span>
 
                 </button>
+                </div>
 
-                <div class="collapse navbar-collapse" id="menuNav">
+                <div class="collapse navbar-collapse " id="menuNav">
                     <ul class="nav nav-pills ms-auto">
                         <li class="nav-item">
-                            <a href="#home" class="nav-link ">Home</a>
+                            <a href="#home" class="nav-link  ">Home</a>
                         </li>
 
                         <li class="nav-item">
                             <a href="#sobre" class="nav-link">Sobre a Empresa</a>
                         </li>
 
-                        <li class="nav-item"><a href="#login" class="nav-link active">Entrar</a></li>
+                        <li class="nav-item"><a href="#login" class="nav-link active ">Entrar</a></li>
 
                     </ul>
                 </div>
