--- a/index.html
+++ b/index.html
@@ -1,40 +1,53 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rápido&Seguro</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 </head>
+
 <body>
     <header>
-        <nav class="navbar navbar-expand-md">
-            <div class="container-fluid">
-                <div class="row">
-                    <img src="assets/testeee.png" alt="Logo da Empresa" class=" col-2">
-                <a href="#" class="navbar-brand col-6" >Rápido&Seguro</a>
-                    <button class="navbar-toggler col-3" data-bs-toggle="collapse" data-bs-target="#menuNav">
+        <nav class="navbar navbar-expand-md navbar-light bg-light">
+            <div class="container">
+
+                <!-- Logo E Nome -->
+                <a href="#" class="navbar-brand d-flex align-items-center">
+                    <img src="assets/icon.png" alt="Logo da Empresa" width="40"
+                        class="me-2 img-fluid">Rápido&Seguro</a>
+
+                <!-- Botão de menu -->
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menuNav">
                     <span class="navbar-toggler-icon"></span>
-
                 </button>
-                </div>
 
-                <div class="collapse navbar-collapse " id="menuNav">
-                    <ul class="nav nav-pills ms-auto">
+                <!-- Menu da pagina -->
+                <div class="collapse navbar-collapse" id="menuNav">
+                    <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
-                            <a href="#home" class="nav-link  ">Home</a>
+                            <a href="#home" class="nav-link">Home</a>
                         </li>
 
                         <li class="nav-item">
                             <a href="#sobre" class="nav-link">Sobre a Empresa</a>
                         </li>
 
-                        <li class="nav-item"><a href="#login" class="nav-link active ">Entrar</a></li>
-
+                        <li class="nav-item">
+                            <a href="#login" class="nav-link active">Entrar</a>
+                        </li>
                     </ul>
                 </div>
+
+            </div>
+        </nav>
     </header>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
