--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
 
                 <!-- Logo E Nome -->
                 <a href="#" class="navbar-brand d-flex align-items-center">
-                    <img src="assets/icon.png" alt="Logo da Empresa" width="40"
-                        class="me-2 img-fluid">Rápido&Seguro</a>
+                    <img src="assets/icon.png" alt="Logo da Empresa" width="40" class="me-2 img-fluid">Rápido&Seguro</a>
 
                 <!-- Botão de menu -->
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menuNav">
