--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rápido&Seguro</title>
+<!-- Importando  -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 </head>
@@ -43,6 +44,42 @@
             </div>
         </nav>
     </header>
+
+
+    <footer class="bg-dark text-light pt-4 mt-5">
+    <div class="container">
+        <div class="row">
+
+            <!-- Sobre -->
+            <div class="col-md-4 mb-3">
+                <h5>Rápido&Seguro</h5>
+                <p class="small">
+                    Soluções ágeis e seguras para você e sua empresa.
+                    Nosso compromisso é oferecer qualidade e confiança.
+                </p>
+            </div>
+
+            
+
+            <!-- Contato -->
+            <div class="col-md-4 mb-3">
+                <h5>Contato</h5>
+                <p class="small mb-1">São Paulo - SP</p>
+                <p class="small mb-1">Telefone (11) 99999-9999</p>
+                <p class="small">Email: contato@rapidoeseguro.com</p>
+            </div>
+
+        </div>
+
+        <!-- Linha divisória -->
+        <hr class="border-light">
+
+        <!-- Copyright -->
+        <div class="text-center pb-3">
+            <small>&copy; 2026 Rápido&Seguro - Todos os direitos reservados.</small>
+        </div>
+    </div>
+</footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
