--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Rápido&Seguro</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+        
 </head>
 
 <body>
@@ -21,7 +22,7 @@
                     <label for="passwordUser">Senha</label>
                     <input class="m-2" type="password" name="passwordUser" id="passwordUser" placeholder="Ex: ***-****"
                         required><br>
-                    <div class="text-end text-muted" >
+                    <div class="text-center text-muted" >
                         <a href="#">Esqueci minha senha</a><br>
                     </div>
 
