--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 </head>
 
-<body>
+<body class="d-flex flex-column min-vh-100">
     <header>
         <nav class="navbar navbar-expand-md navbar-light bg-light">
             <div class="container">
@@ -44,42 +44,39 @@
             </div>
         </nav>
     </header>
+    <body>
+        
+    </body>
 
 
-    <footer class="bg-dark text-light pt-4 mt-5">
-    <div class="container">
-        <div class="row">
+        <footer class="bg-dark text-light py-3 mt-auto">
+        <div class="container">
+            <div class="row">
 
-            <!-- Sobre -->
-            <div class="col-md-4 mb-3">
-                <h5>Rápido&Seguro</h5>
-                <p class="small">
-                    Soluções ágeis e seguras para você e sua empresa.
-                    Nosso compromisso é oferecer qualidade e confiança.
-                </p>
+                <div class="col-md-6 mb-2">
+                    <h5 class="mb-2">Rápido&Seguro</h5>
+                    <p class="small mb-0">
+                        Soluções ágeis e seguras para você e sua empresa.
+                        Nosso compromisso é oferecer qualidade e confiança.
+                    </p>
+                </div>
+
+                <div class="col-md-6 mb-2">
+                    <h5 class="mb-2">Contato</h5>
+                    <p class="small mb-1">São Paulo - SP</p>
+                    <p class="small mb-1">Telefone (11) 99999-9999</p>
+                    <p class="small mb-0">Email: contato@rapidoeseguro.com</p>
+                </div>
+
             </div>
 
-            
+            <hr class="border-light my-2">
 
-            <!-- Contato -->
-            <div class="col-md-4 mb-3">
-                <h5>Contato</h5>
-                <p class="small mb-1">São Paulo - SP</p>
-                <p class="small mb-1">Telefone (11) 99999-9999</p>
-                <p class="small">Email: contato@rapidoeseguro.com</p>
+            <div class="text-center">
+                <small>&copy; 2026 Rápido&Seguro - Todos os direitos reservados.</small>
             </div>
-
         </div>
-
-        <!-- Linha divisória -->
-        <hr class="border-light">
-
-        <!-- Copyright -->
-        <div class="text-center pb-3">
-            <small>&copy; 2026 Rápido&Seguro - Todos os direitos reservados.</small>
-        </div>
-    </div>
-</footer>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
