--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         
 </head>
 
-<body>
+<body class="bg-light">
     <main class="mt-4 container">
 
         <header>
@@ -48,8 +48,8 @@
                 </div>
             </nav>
         </header>
-        <div class="row">
-            <div class="card col-12 col-sm-6 text-center mx-auto">
+        <div class="container text-center">
+            <div class="row col-12 col-sm-6 text-center mx-auto">
                 <form action="#" method="post">
                     <label for="mailUser">Email</label>
                     <input class="m-2" type="email" name="mailUser" id="mailUser" placeholder="Ex: email@mail.com"
@@ -58,11 +58,11 @@
                     <label for="passwordUser">Senha</label>
                     <input class="m-2" type="password" name="passwordUser" id="passwordUser" placeholder="Ex: ***-****"
                         required><br>
-                    <div class="text-end text-muted" >
+                    <div class="text-center text-muted" >
                         <a href="#">Esqueci minha senha</a><br>
                     </div>
 
-                    <button class="btn btn-primary">Enviar</button>
+                    <button class="btn btn-primary col-12">Enviar</button>
                 </form>
             </div>
         </div>
@@ -79,9 +79,6 @@
                         Nosso compromisso é oferecer qualidade e confiança.
                     </p>
                 </div>
-
-
-
                 <!-- Contato -->
                 <div class="col-md-4 mb-3">
                     <h5>Contato</h5>
