--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body class="d-flex flex-column min-vh-100 bg-light">
+<body class="d-flex flex-column min-vh-100 bg-info-subtle">
 
     <!-- HEADER -->
     <header>
-        <nav class="navbar navbar-expand-md navbar-light bg-light">
+        <nav class="navbar navbar-expand-md navbar-light bg-info-subtle">
             <div class="container">
 
                 <!-- Logo -->
@@ -49,13 +49,13 @@
     </header>
 
     <!-- CONTEÚDO DO LOGIN -->
-    <main class="flex-fill container mt-4 ">
+    <main class="flex-fill container mt-4">
 
         <div class="row justify-content-center">
             <div class="col-12 col-sm-8 col-md-6 col-lg-4">
 
                 <form class="card p-4 shadow-sm">
-                    <div class="mb-3">
+                    <div class="mb-3 main">
                         <label for="mailUser" class="form-label">Email</label>
                         <input type="email" class="form-control" id="mailUser"
                             placeholder="Ex: email@mail.com" required>
@@ -80,7 +80,7 @@
     </main>
 
     <!-- FOOTER E INFORMAÇÕES -->
-    <footer class="bg-dark text-light py-3 mt-auto">
+    <footer class="py-3 mt-auto footer">
         <div class="container">
             <div class="row">
 
