--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </header>
 
     <!-- CONTEÚDO DO LOGIN -->
-    <main class="flex-fill container mt-4">
+    <main class="container my-4">
 
         <div class="row justify-content-center">
             <div class="col-12 col-sm-8 col-md-6 col-lg-4">
@@ -57,14 +57,14 @@
                 <form class="card p-4 shadow-sm">
                     <div class="mb-3 main">
                         <label for="mailUser" class="form-label">Email</label>
-                        <input type="email" class="form-control" id="mailUser"
-                            placeholder="Ex: email@mail.com" required>
+                        <input type="email" class="form-control" id="mailUser" placeholder="Ex: email@mail.com"
+                            required>
                     </div>
 
                     <div class="mb-3">
                         <label for="passwordUser" class="form-label">Senha</label>
-                        <input type="password" class="form-control" id="passwordUser"
-                            placeholder="Ex: ***-****" required>
+                        <input type="password" class="form-control" id="passwordUser" placeholder="Ex: ***-****"
+                            required>
                     </div>
 
                     <div class="text-end mb-3">
@@ -80,7 +80,7 @@
     </main>
 
     <!-- FOOTER E INFORMAÇÕES -->
-    <footer class="py-3 mt-auto footer">
+    <footer class="py-3 footer">
         <div class="container">
             <div class="row">
 
