--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
                 <!-- Logo -->
                 <a href="#" class="navbar-brand d-flex align-items-center">
-                    <img src="assets/icon.png" alt="Logo da Empresa" width="40" class="img-fluid me-2">
+                    <img src="assets/logoEmpresa.png" alt="Logo da Empresa" width="40" class="img-fluid me-2">
                     Rápido&Seguro
                 </a>
 
